--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,17 @@
+
 .App {
   text-align: center;
 }
 
 .App-logo {
+  font-family: "SF Mono";
   height: 40vmin;
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@font-face { 
+  font-family: "SF Mono";
+  font-weight: 200;
+  font-style: normal;
+  src: url(https://github.com/supercomputra/SF-Mono-Font/blob/1409ae79074d204c284507fef9e479248d5367c1/SFMono-Medium.otf);
 }
