--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -1,7 +1,7 @@
 .footer {
-    font-family: "SF Mono";
+    font-family: "Nanum Gothic";
     position: fixed;
-    height: 40px;
+    height: 30px;
     line-height: 40px;
     text-align: center;
     box-shadow: 0px -4px 10px rgba(0, 0, 0, 0.1);
@@ -9,7 +9,7 @@
 }
 
 .footerImg {
-    margin-top: 10px;
-    margin-bottom: 10px;
-    height: 20px;
+    margin-top: 7.5px;
+    margin-bottom: 7.5px;
+    height: 15px;
 }
