--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -1,15 +1,23 @@
 .logo {
-    width: 220px;
-    height: 40px;
+    width: 200px;
+    height: 30px;
     position: absolute;
     top: 10px;
 }
 
 .category {
-    font-weight: 600;
-    font-size: 16px;
     display: inline;
     cursor: pointer;
+}
+
+.mainCategory {
+    font-weight: 600;
+    font-size: 16px;
+}
+
+.subCategory {
+    font-weight: 600;
+    font-size: 14px;
 }
 
 .categoryOnLeft {
@@ -22,15 +30,16 @@
 }
 
 .header {
-    font-family: "SF Mono";
-    height: 60px;
-    line-height: 60px;
+    font-family: "Nanum Gothic";
+    height: 50px;
+    line-height: 50px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
 }
 
 .menuBar {
-    top: 60px;
-    height: 50px;
+    font-family: "Nanum Gothic";
+    top: 50px;
+    height: 40px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
 }
 
