feat: 헤더 카테고리 버튼 바 추가
링크 주소 값에 따라 다르게 동작하도록 하기 위해 router, link 추가

--- a/src/App.css
+++ b/src/App.css
@@ -16,9 +16,7 @@
   src: url("./fonts/SFMono-Regular.otf") format('truetype')
 }
 
-@font-face {
-  font-family: "Nanum Gothic";
-  font-weight: 100;
-  font-style: normal;
-  src: url(//fonts.googleapis.com/earlyaccess/nanumgothic.css);
+@import url(//fonts.googleapis.com/earlyaccess/nanumgothic.css);
+.nanumgothic * {
+ font-family: 'Nanum Gothic', sans-serif;
 }
