--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -6,8 +6,16 @@
 }
 
 .category {
-    display: inline;
+    display: inline-block;
+    height: 50px;
     cursor: pointer;
+}
+
+.isCheckedCategory {
+    border-bottom: 6px solid #3D7FFF;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
 }
 
 .mainCategory {
@@ -51,10 +59,7 @@
     visibility: hidden;
 }
 
-
-.suffix {
-    position: relative;
-    left: -60px;
-    top: 25px;
-    z-index: 90;
+a {
+    text-decoration: none;
+    color: black;
 }
