--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -49,6 +49,7 @@
     top: 50px;
     height: 40px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+    background-color: white;
 }
 
 .openMenu {
